update font sizes

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         display: flex;
         width: 100%;
         justify-content: flex-start;
-        font-size: 1.5em;
+        font-size: 5vw;
         font-weight: bold;
         margin: 6px 0px;
         color: var(--blue-color);
@@ -398,6 +398,9 @@
         }
         #selected-symptoms-list::-webkit-scrollbar {
           display: none;
+        }
+        .section-title {
+          font-size: 1.5vw;
         }
       }
 
