--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         display:flex;
         width: 100%;
         justify-content: center;
-        font-size: 2em;
+        font-size: 8vw;
         font-weight: bold;
         margin-bottom: 0.25em;
         padding: 0.5em 0;
@@ -398,6 +398,9 @@
         }
         #selected-symptoms-list::-webkit-scrollbar {
           display: none;
+        }
+        #title {
+          font-size: 2vw;
         }
         .section-title {
           font-size: 1.5vw;
