--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         --green-color: rgb(33,197,134);
         --green-color-dark: rgb(26, 153, 104);
         --blue-color: rgb(28,87,101);
+        --desktop-large-font: 30px;
+        --desktop-medium-font: 22px;
+        --desktop-small-font: 15px;
+        --mobile-large-font: 8vw;
+        --mobile-medium-font: 5vw;
+        --mobile-small-font: 3vw;
       }
 
       html {
@@ -46,7 +52,7 @@
         display:flex;
         width: 100%;
         justify-content: center;
-        font-size: 8vw;
+        font-size: var(--mobile-large-font);
         font-weight: bold;
         margin-bottom: 0.25em;
         padding: 0.5em 0;
@@ -174,7 +180,7 @@
         border-radius: 4px;
         text-align: left;
         outline: none;
-        font-size: 1.5em;
+        font-size: var(--mobile-medium-font);
         margin-bottom: 0.5em;
       }
 
@@ -222,14 +228,14 @@
         display: flex;
         width: 100%;
         justify-content: flex-start;
-        font-size: 5vw;
+        font-size: var(--mobile-medium-font);
         font-weight: bold;
         margin: 6px 0px;
         color: var(--blue-color);
       }
 
       #development-warning {
-        font-size: 1em;
+        font-size: var(--mobile-small-font);
         color: rgb(199,0,0);
         justify-content: center;
         margin: 0 0 0.5em 0;
@@ -261,7 +267,7 @@
         align-items: center;
         justify-content: flex-start;
         color: var(--blue-color);
-        font-size: 1.5em;
+        font-size: var(--mobile-medium-font);
       }
 
       .number-input{
@@ -273,7 +279,7 @@
         box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
         box-sizing: border-box;
         height: 1.5em;
-        font-size: 1.5em;
+        font-size: var(--mobile-medium-font);
         color: var(--blue-color);
       }
 
@@ -284,7 +290,7 @@
         padding-left: 35px;
         margin: 6px 0px;
         cursor: pointer;
-        font-size: 22px;
+        font-size: var(--desktop-medium-font);
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
@@ -400,10 +406,25 @@
           display: none;
         }
         #title {
-          font-size: 2vw;
+          font-size: var(--desktop-large-font);
+        }
+        #development-warning {
+          font-size: var(--desktop-small-font);
         }
         .section-title {
-          font-size: 1.5vw;
+          font-size: var(--desktop-medium-font);
+        }
+        .text-input-label {
+          font-size: var(--desktop-medium-font);
+        }
+        .number-input {
+          font-size: var(--desktop-medium-font);
+        }
+        .collapsible-section {
+          font-size: var(--desktop-medium-font);
+        }
+        .checkbox-container {
+          font-size: var(--desktop-medium-font);
         }
       }
 
