--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
         display: flex;
         width: 100%;
         max-width: 610px;
+        min-height: 2em;
         justify-content: center;
+        align-items: center;
         background-color: var(--green-color-dark);
         color: white;
         padding: 0.5em 0;
