fixed error in checkbox-container font-size variable

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         padding-left: 35px;
         margin: 6px 0px;
         cursor: pointer;
-        font-size: var(--desktop-medium-font);
+        font-size: var(--mobile-medium-font);
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
