--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         font-weight: bold;
         cursor: pointer;
         border-radius: 4px;
+        margin: 0.5em 0;
       }
 
       #show-modal-button:hover{
