fixed bug where clicking the close form button refreshes the page and resets user choices

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
   <div id="title">Cancer Referral Checker</div>
   <div id="float-container">
     <form id="float-form" class="form" name="float-form">
-      <button id="close-button-float" onclick="closeModal();">&times;</button>
+      <button type="button" id="close-button-float" onclick="closeModal();return false;">&times;</button>
     </form>
   </div>
   <div id="main-container">
