--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         user-select: none; /* Standard syntax */
         /*overflow: hidden;*/
       }
+      
       #title {
         display:flex;
         width: 100%;
@@ -61,7 +62,12 @@
         margin-bottom: 0.25em;
         padding: 0.5em 0;
         color: white;
-        background-image: linear-gradient(318deg, color(srgb 0.1174 0.6766 0.5767), color(srgb 0.1516 0.8038 0.5354));
+        background: rgb(30,173,147);
+        background: -moz-linear-gradient(318deg, rgba(30,173,147,1) 0%, rgba(39,205,137,1) 100%);
+        background: -webkit-linear-gradient(318deg, rgba(30,173,147,1) 0%, rgba(39,205,137,1) 100%);
+        background: linear-gradient(318deg, rgba(30,173,147,1) 0%, rgba(39,205,137,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1ead93",endColorstr="#27cd89",GradientType=1);
+        /*background-image: linear-gradient(318deg, color(srgb 0.1174 0.6766 0.5767), color(srgb 0.1516 0.8038 0.5354));*/
       }
 
       #float-container {
