Added icon files and code

--- a/MSK_Tool.html
+++ b/MSK_Tool.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" type="image/png" href="/src/msk/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/src/msk/favicon.svg" />
+  <link rel="shortcut icon" href="/src/msk/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/msk/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MSK Tool" />
+  <link rel="manifest" href="/src/msk/site.webmanifest" />
   <title>MSK Diagnostic Tool</title>
   <style>
     /*Colour Scheme*/
@@ -772,8 +778,7 @@
 
 
     //TODO:
-    // 1. FIX TO RETURN THE SCROLL ICON
-    // 2. Code to include the movement specific non-root neurological causes
+    // 1. Code to include the movement specific non-root neurological causes
 
 
     function updateOutput() {
@@ -870,7 +875,7 @@
       } else {
         scrollIndicator.style.display = "none";
       }
-      
+
     }
 
 
