--- a/MSK_Tool.html
+++ b/MSK_Tool.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MSK Flowchart Tool</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" type="image/png" href="/src/msk/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/src/msk/favicon.svg" />
+  <link rel="shortcut icon" href="/src/msk/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/msk/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MSK Tool" />
+  <link rel="manifest" href="/src/msk/site.webmanifest" />
   <style>
     :root {
       --blue-color: rgb(30,113,173);
